# ev-2-ml

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
mlproject/: cli.py  data.py  pipelines.py  reporting.py  utils.py
